--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "postcss-preset-env": "^8.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "yarn": "^1.22.19"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "craco start",
